2004-08-30 Alain Magloire

	Fix for 72914
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java

2004-08-27 Chris Wiebe

	class wizard fixes
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationCodeGenerator.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/SourceFileSelectionDialog.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/SourceFolderSelectionDialog.java

2004-08-27 Alain Magloire

	Fix for 72135
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathBasePage.java
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathSourceEntryPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/TreeListDialgField.java

2004-08-26 Alain Magloire
	Be on the same length as the Java Editor and Ant Editor
	for the Preference page.  Misc warning removes, when
	raising the level of warnings from the compiler.

	* src/org/eclipse/cdt/internal/ui/preference/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preference/PreferencesMessages.properties

2004-08-25 Chris Wiebe

	better handling of enclosing type
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/AbstractMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/ConstructorMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/DestructorMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/IMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java
	* src/org/eclipse/cdt/internal/ui/wizards/NewClassCreationWizard.java

2004-08-25 Chris Wiebe

	support for matching enclosed type names